# otus__asyncio_basic

./: crawler.py  pyproject.toml  readme.md
